Fixed an issue with empty space on smaller screen

--- a/css/main.css
+++ b/css/main.css
@@ -599,6 +599,9 @@ Also, this state accounts for larger containers, hence the larger "max-height".*
     .enlargeIni {
         max-height: 1000px;
     }
+    .shrinkEnd {
+        max-height: 0px;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -618,5 +621,8 @@ Also, this state accounts for larger containers, hence the larger "max-height".*
     }
     .enlargeIni {
         max-height: 1600px;
+    }
+    .shrinkEnd {
+        max-height: 0px;
     }
 }
